# OpcUaDeviceRepository

./: .gitignore  CMakeLists.txt  LICENSE  README.md
OPCUAJoystickDevice/: CMakeLists.txt  JoystickController.cc  JoystickController.hh  JoystickInterface.hh  JoystickServerMain.cc  JoystickView.cc  JoystickView.hh  LinuxJoystickDriverModel.cc  LinuxJoystickDriverModel.hh  OpcUaJoystick.cc  OpcUaJoystick.hh  README.md
OPCUAProductionStation/: .project  CMakeLists.txt  OpcUaProductionStation.cc  OpcUaProductionStation.hh  Pixtend2DriverModel.cpp  ProductionStationController.cc  ProductionStationController.hh  ProductionStationInterface.hh  ProductionStationServerMain.cc  ProductionStationView.cc  ProductionStationView.hh  Readme.md
OPCUATrafficlight/: .project  CMakeLists.txt  OpcUaTrafficlight.cc  OpcUaTrafficlight.hh  Pixtend2DriverModel.h  Readme.md  TrafficlightInterface.hh  TrafficlightNS.xml  TrafficlightView.cc
OPCUATrafficlightSW/: CMakeLists.txt  OpcUaTrafficlight.cc  OpcUaTrafficlight.hh  Pixtend2DriverModel.cpp  Pixtend2DriverModel.h  Readme.md  TrafficlightController.cc  TrafficlightController.hh  TrafficlightServerMain.cc  TrafficlightView.hh
Open62541CppWrapper/: .cproject  CMakeLists.txt  README.md
Open62541CppWrapper/Open62541CppWrapper/: CMakeLists.txt  OpcUaGenericClient.cc  OpcUaGenericClient.hh  OpcUaGenericServer.cc  OpcUaGenericServer.hh  OpcUaNodeId.cc  OpcUaNodeId.hh  OpcUaValueType.cc  OpcUaValueType.hh
Open62541CppWrapper/Open62541CppWrapper/MVC/: AbstractController.hh  AbstractModel.cc  AbstractModel.hh
Open62541CppWrapper/examples/SimpleClient/: CMakeLists.txt  SimpleClient.cpp
Open62541CppWrapper/examples/SimpleServer/: CMakeLists.txt  SimpleServer.cpp
Open62541CppWrapper/tests/: OpcUaValueTypeTest.cc
